2007-12-08  Julian Lamb
	* src/render.c,src/callbacks.c: Fix translation code for cairo renderer
	  so things are correctly centered on the screen after a zoom-to-fit. Fix
	  scaling code for MM unit drawings.
	* src/amacro.c,src/gerber.c: Fix error messages in amacro parsing (bug
	  #1845782) on FreeBSD systems (thanks to Joerg for the patch). Also, fix
	  possible hangs during amacro parsing (e.g. the file "%AM" would hang
	  gerbv, since it didn't correctly check for EOF).

2007-12-07  SDB
	* render.c, render.h, Many other files:  Started to refactor
	gerbv.  Also start to incorporate statistics gathering stuff
	into gerber.[hc].

2007-12-07  Julian Lamb
	* src/drill.c: Fix warning messages on some drill files (bug #1316247).
	  The drill parser did not zero out new gerbv_aperture_t structures, which
	  sometimes allowed junk in the param[x] portions, which confused the
	  parser and gave warnings and potentially incorrectly rendered drill
	  holes.

2007-12-07  Julian Lamb
	* src/draw.c: Fix thermal rendering bug (bug #1024000) in the cairo
	  rendering code (this bug is not easily fixable in the GDK code, but
	  it is being obsoleted soon).

2007-12-06  Julian Lamb
	* src/callbacks.c,src/gerbv.c: Add private implementation of
	  gdk_cairo_create to allow compilation with gtk < 2.8. Fixed bug in gerbv
	  which was causing gdk rendering to skip frames sometimes.

2007-12-05  Julian Lamb
	* src/gerber.c,src/drill.h,src/gerb_image.h: Fix memory corruption issue
	  with G54 codes not checking if aperture numbers were within bounds (bug
	  #1843983). Also, bumped up max aperture number from 999 to 9999 based on
	  reports of some CAD packages using numbers this hig (even though it
	  clearly says 999 is the highest number in the RS274X spec). This will
	  increase memory usage somewhat, but hopefully should be acceptable.

2007-12-05  Julian Lamb
	* src/drill.c: Fix parsing of drill files with commas in
	  place of decimals (bug #1844100).

2007-12-05  Julian Lamb